--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.6.0",
     "install": "^0.13.0",
     "nuxt": "^2.0.0",
+    "vue-bus": "^1.2.1",
     "vue-codemirror": "^4.0.6",
     "vue-draggable-resizable": "^2.0.1"
   },
